<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="action_detail">Detail</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="str_img_loading_des">Image Loading</string>
    <string name="str_download_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="str_download_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="str_download_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <!--string name="url_glide">https://github.com/bumptech/glide</string-->
    <!--string name="url_glide">https://github.com/square/retrofit/archive/refs/heads/master.zip</string-->
    <string name="url_glide">https://speed.hetzner.de/100MB.bin</string>
    <string name="url_loadapp">https://github.com/danhpbt/LoadApp</string>
    <string name="url_retrofit">https://github.com/square/retrofit</string>
    <string name="msg_select_repo">Please select item to download</string>
    <string name="download_completed">Download completed.</string>
    <string name="download_failed">Download failed.</string>
    <string name="download_paused">Download paused.</string>
    <string name="download_pending">Loading...</string>
    <string name="download_progress">Downloading %d%%</string>
    <string name="msg_completed">Your download has completed.</string>
    <string name="msg_failed">Your download has failed.</string>

    <string name="detail_url">Url:</string>
    <string name="detail_status">Status:</string>
    <string name="str_close">Close</string>
    <string name="status_success">Success</string>
    <string name="status_fail">Fail</string>
    <string name="str_download">Download</string>

</resources>
